--- a/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1.ipynb
+++ b/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1.ipynb
@@ -1107,6 +1107,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 2f286a0] hello world added\n",
+      " 1 file changed, 1133 insertions(+), 2 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add .\n",
+    "! git commit -m \"hello world added\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 32 threads.\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (5/5), 5.84 KiB | 5.84 MiB/s, done.\n",
+      "Total 5 (delta 1), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "To github.com:arjun921/dl-refresher.git\n",
+      "   5eae425..2f286a0  master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
