--- a/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1.ipynb
+++ b/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1.ipynb
@@ -1107,44 +1107,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 2f286a0] hello world added\n",
-      " 1 file changed, 1133 insertions(+), 2 deletions(-)\n"
+      "[master d3f5b43] saving week 1\n",
+      " 1 file changed, 43 insertions(+)\n",
+      "Warning: Permanently added the RSA host key for IP address '140.82.113.3' to the list of known hosts.\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 32 threads.\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (5/5), 801 bytes | 801.00 KiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
-    "! git commit -m \"hello world added\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counting objects: 5, done.\n",
-      "Delta compression using up to 32 threads.\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (5/5), 5.84 KiB | 5.84 MiB/s, done.\n",
-      "Total 5 (delta 1), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
-      "To github.com:arjun921/dl-refresher.git\n",
-      "   5eae425..2f286a0  master -> master\n"
-     ]
-    }
-   ],
-   "source": [
+    "!git commit -m \"saving week 1\"\n",
     "!git push"
    ]
   },
