--- a/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1.ipynb
+++ b/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1.ipynb
@@ -60,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1081,7 +1083,7 @@
    ],
    "source": [
     "# epochs = model will go through training loop 500 times\n",
-    "# 1 loop = make a guess, measure how good or bad the guess is using loss function, use optimizer and data to make another guess\n",
+    "# 1 loop = make a guess, measure how good or bad the guess is using loss function, uses optimizer and data to make another, better guess\n",
     "model.fit(x,y,epochs=500)"
    ]
   },
@@ -1107,22 +1109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master d3f5b43] saving week 1\n",
-      " 1 file changed, 43 insertions(+)\n",
-      "Warning: Permanently added the RSA host key for IP address '140.82.113.3' to the list of known hosts.\n",
+      "[master dfdfc39] saving week 1\n",
+      " 1 file changed, 9 insertions(+), 25 deletions(-)\n",
       "Counting objects: 5, done.\n",
       "Delta compression using up to 32 threads.\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (5/5), 801 bytes | 801.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 669 bytes | 669.00 KiB/s, done.\n",
       "Total 5 (delta 2), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n"
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To github.com:arjun921/dl-refresher.git\n",
+      "   d3f5b43..dfdfc39  master -> master\n"
      ]
     }
    ],
