saving week 1 exercise

--- a/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1/Week_1_ex_1.ipynb
+++ b/coursera-TFInPractiseSpecialization/intro-to-tf/Week 1/Week_1_ex_1.ipynb
@@ -27,13 +27,13 @@
     "# presuming 50K+50k per bedroom, 1bhk=100k, 2bhk=150k, etc \n",
     "# build a model\n",
     "def house_model(y_new):\n",
-    "    x = [i for i in range(5)]\n",
-    "    y = [j*5+5 for j in range(5)]\n",
+    "    xs = np.array([i for i in range(10)],dtype=float)\n",
+    "    ys = np.array([0.50+(j*0.50) for j in range(10)],dtype=float)\n",
     "    model = keras.Sequential([\n",
     "        keras.layers.Dense(units=1, input_shape=[1])\n",
     "    ])\n",
     "    model.compile(loss='mse',optimizer='sgd')\n",
-    "    model.fit(x,y,epochs=100)\n",
+    "    model.fit(xs,ys,epochs=2000)\n",
     "    return model.predict(y_new)[0]"
    ]
   },
@@ -265,14 +265,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 5da5654] saving week 1 exercise\n",
+      " 2 files changed, 2 insertions(+), 1187 deletions(-)\n",
+      " delete mode 100644 coursera-TFInPractiseSpecialization/intro-to-tf/Week 1.ipynb\n",
+      "Counting objects: 6, done.\n",
+      "Delta compression using up to 32 threads.\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (6/6), 476 bytes | 476.00 KiB/s, done.\n",
+      "Total 6 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To github.com:arjun921/dl-refresher.git\n",
+      "   d7f69c1..5da5654  master -> master\n"
+     ]
+    }
+   ],
    "source": [
     "!git add .\n",
     "!git commit -m \"saving week 1 exercise\"\n",
     "!git push"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
