Updated notebooks week 2

--- a/coursera-TFInPractiseSpecialization/intro-to-tf/Week 2/Callbacks - Loss autostop.ipynb
+++ b/coursera-TFInPractiseSpecialization/intro-to-tf/Week 2/Callbacks - Loss autostop.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -186,8 +186,42 @@
       "Epoch 27/100\n",
       "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1277\n",
       "Epoch 28/100\n",
-      "34144/60000 [================>.............] - ETA: 1s - loss: 0.1234"
+      "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1251\n",
+      "Epoch 29/100\n",
+      "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1276\n",
+      "Epoch 30/100\n",
+      "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1205\n",
+      "Epoch 31/100\n",
+      "60000/60000 [==============================] - 3s 53us/sample - loss: 0.1160\n",
+      "Epoch 32/100\n",
+      "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1127\n",
+      "Epoch 33/100\n",
+      "60000/60000 [==============================] - 3s 53us/sample - loss: 0.1137\n",
+      "Epoch 34/100\n",
+      "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1076\n",
+      "Epoch 35/100\n",
+      "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1098\n",
+      "Epoch 36/100\n",
+      "60000/60000 [==============================] - 3s 53us/sample - loss: 0.1039\n",
+      "Epoch 37/100\n",
+      "60000/60000 [==============================] - 3s 52us/sample - loss: 0.1034\n",
+      "Epoch 38/100\n",
+      "60000/60000 [==============================] - 3s 53us/sample - loss: 0.1047\n",
+      "Epoch 39/100\n",
+      "59840/60000 [============================>.] - ETA: 0s - loss: 0.0991\n",
+      "Accuracy reached 90%, cancelled training!\n",
+      "60000/60000 [==============================] - 3s 53us/sample - loss: 0.0993\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7f44a8158160>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -197,11 +231,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing op RangeDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op RepeatDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op MapDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op PrefetchDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op FlatMapDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op TensorDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op RepeatDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op ZipDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op ParallelMapDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op ModelDataset in device /job:localhost/replica:0/task:0/device:CPU:0\n",
+      "Executing op __inference_distributed_function_830930 in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "10000/10000 [==============================] - 0s 49us/sample - loss: 0.5328\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5328350210994482"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(test_images, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.evaluate(test_images, test_labels)"
+    "!git config --global user.email \"arjun921@gmail.com\"\n",
+    "!git config --global user.name \"Arjun Sunil\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master d8fa078] Added loss autostop, MNIST, Fashion MNIST\r\n",
+      " 5 files changed, 2079 insertions(+)\r\n",
+      " create mode 100644 coursera-TFInPractiseSpecialization/intro-to-tf/Week 2/Callbacks - Loss autostop.ipynb\r\n",
+      " create mode 100644 coursera-TFInPractiseSpecialization/intro-to-tf/Week 2/Course 1 - Part 2 - Lesson 2 - Notebook.ipynb\r\n",
+      " create mode 100644 coursera-TFInPractiseSpecialization/intro-to-tf/Week 2/Course_1_Part_4_Lesson_2_Notebook.ipynb\r\n",
+      " create mode 100644 coursera-TFInPractiseSpecialization/intro-to-tf/Week 2/Fashion MNIST.ipynb\r\n",
+      " create mode 100644 coursera-TFInPractiseSpecialization/intro-to-tf/Week 2/Mnist.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add .\n",
+    "!git commit -m \"Added loss autostop, MNIST, Fashion MNIST\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The authenticity of host 'github.com (140.82.114.4)' can't be established.\r\n",
+      "RSA key fingerprint is SHA256:nThbg6kXUpJWGl7E1IGOCspRomTxdCARLviKw6E5SY8.\r\n",
+      "Are you sure you want to continue connecting (yes/no)? "
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
    ]
   },
   {
@@ -209,9 +325,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git commit -am \"Added loss autostop, Mnist, Fashion MNIS\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
