--- a/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-1/lesson-1-text-preprocess-tokenizing.ipynb
+++ b/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-1/lesson-1-text-preprocess-tokenizing.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.preprocessing.text import Tokenizer"
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
@@ -18,7 +19,8 @@
     "sentences = [\n",
     "    'i love my dog',\n",
     "    'I, love my cat',\n",
-    "    'You love my dog!'\n",
+    "    'You love my dog!',\n",
+    "    'Do you think my dog is awesome?'\n",
     "]"
    ]
   },
@@ -28,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(num_words=100)"
+    "tokenizer = Tokenizer(num_words=100, oov_token='<OOV>')"
    ]
   },
   {
@@ -57,7 +59,17 @@
     {
      "data": {
       "text/plain": [
-       "{'love': 1, 'my': 2, 'i': 3, 'dog': 4, 'cat': 5, 'you': 6}"
+       "{'<OOV>': 1,\n",
+       " 'my': 2,\n",
+       " 'love': 3,\n",
+       " 'dog': 4,\n",
+       " 'i': 5,\n",
+       " 'you': 6,\n",
+       " 'cat': 7,\n",
+       " 'do': 8,\n",
+       " 'think': 9,\n",
+       " 'is': 10,\n",
+       " 'awesome': 11}"
       ]
      },
      "execution_count": 6,
@@ -67,6 +79,138 @@
    ],
    "source": [
     "word_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequences = tokenizer.texts_to_sequences(sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 3, 2, 4], [5, 3, 2, 7], [6, 3, 2, 4], [8, 6, 9, 2, 4, 10, 11]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i love my dog',\n",
+       " 'I, love my cat',\n",
+       " 'You love my dog!',\n",
+       " 'Do you think my dog is awesome?']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "padded = pad_sequences(sequences, maxlen=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = [\n",
+    "    'i really love my dog',\n",
+    "    'my dog loves my manatee'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_seq = tokenizer.texts_to_sequences(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 1, 3, 2, 4], [2, 4, 1, 2, 1]]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "padded = pad_sequences(test_seq, maxlen=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 5, 1, 3, 2, 4],\n",
+       "       [0, 0, 0, 0, 0, 2, 4, 1, 2, 1]], dtype=int32)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "padded"
    ]
   },
   {
@@ -93,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
