Done with week 2

--- a/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-2/sarcasm-detector-classifier.ipynb
+++ b/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-2/sarcasm-detector-classifier.ipynb
@@ -509,20 +509,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[8.337506e-01]\n",
-      " [6.829881e-06]]\n"
+      "[6.829881e-06]\n"
      ]
     }
    ],
    "source": [
-    "print(model.predict(padded))"
+    "print(model.predict(padded)[1])"
    ]
   },
   {
