Saving file after training

--- a/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-3/multi-layer-lstm.ipynb
+++ b/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-3/multi-layer-lstm.ipynb
@@ -134,7 +134,17 @@
       "Epoch 4/10\n",
       "391/391 [==============================] - 124s 318ms/step - loss: 0.2940 - accuracy: 0.8856 - val_loss: 0.4311 - val_accuracy: 0.8320\n",
       "Epoch 5/10\n",
-      "377/391 [===========================>..] - ETA: 3s - loss: 0.2153 - accuracy: 0.9213"
+      "391/391 [==============================] - 125s 319ms/step - loss: 0.2166 - accuracy: 0.9208 - val_loss: 0.4412 - val_accuracy: 0.8274\n",
+      "Epoch 6/10\n",
+      "391/391 [==============================] - 125s 319ms/step - loss: 0.2657 - accuracy: 0.8986 - val_loss: 0.4937 - val_accuracy: 0.8212\n",
+      "Epoch 7/10\n",
+      "391/391 [==============================] - 125s 320ms/step - loss: 0.1785 - accuracy: 0.9370 - val_loss: 0.4631 - val_accuracy: 0.8173\n",
+      "Epoch 8/10\n",
+      "391/391 [==============================] - 125s 321ms/step - loss: 0.1247 - accuracy: 0.9589 - val_loss: 0.5048 - val_accuracy: 0.8200\n",
+      "Epoch 9/10\n",
+      "391/391 [==============================] - 125s 319ms/step - loss: 0.2323 - accuracy: 0.9060 - val_loss: 0.6778 - val_accuracy: 0.6977\n",
+      "Epoch 10/10\n",
+      "391/391 [==============================] - ETA: 0s - loss: 0.3508 - accuracy: 0.8524"
      ]
     }
    ],
@@ -169,6 +179,17 @@
    "source": [
     "plot_graphs(history, 'accuracy')\n",
     "plot_graphs(history, 'loss')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add .\n",
+    "!git commit -m \"Saving file after training\"\n",
+    "!git push"
    ]
   },
   {
