Saving file after training

--- a/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-3/multi-layer-lstm.ipynb
+++ b/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-3/multi-layer-lstm.ipynb
@@ -208,24 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 48a9e4d] Saving file after training\n",
-      " 1 file changed, 22 insertions(+), 1 deletion(-)\n",
-      "Warning: Permanently added the RSA host key for IP address '140.82.114.3' to the list of known hosts.\n",
+      "[master 04f482e] Saving file after training\n",
+      " 1 file changed, 50 insertions(+), 7 deletions(-)\n",
       "Counting objects: 6, done.\n",
       "Delta compression using up to 32 threads.\n",
       "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 803 bytes | 803.00 KiB/s, done.\n",
-      "Total 6 (delta 4), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
+      "Writing objects: 100% (6/6), 35.00 KiB | 17.50 MiB/s, done.\n",
+      "Total 6 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To github.com:arjun921/DeepLearning-Journal.git\n",
-      "   bd6a346..48a9e4d  master -> master\n"
+      "   48a9e4d..04f482e  master -> master\n"
      ]
     }
    ],
