Added word generation using LSTM

--- a/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-3/cnn-text-classifier.ipynb
+++ b/deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-3/cnn-text-classifier.ipynb
@@ -208,23 +208,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 04f482e] Saving file after training\n",
-      " 1 file changed, 50 insertions(+), 7 deletions(-)\n",
-      "Counting objects: 6, done.\n",
+      "[master e01bf96] Saving file after training\n",
+      " 2 files changed, 273 insertions(+), 8 deletions(-)\n",
+      " create mode 100644 deeplearning.ai-tensorflow-developer-certificate/3-of-4-nlp-in-tf/week-3/cnn-text-classifier.ipynb\n",
+      "Warning: Permanently added the RSA host key for IP address '140.82.114.4' to the list of known hosts.\n",
+      "Counting objects: 7, done.\n",
       "Delta compression using up to 32 threads.\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 35.00 KiB | 17.50 MiB/s, done.\n",
-      "Total 6 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (7/7), done.\n",
+      "Writing objects: 100% (7/7), 25.94 KiB | 12.97 MiB/s, done.\n",
+      "Total 7 (delta 4), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
       "To github.com:arjun921/DeepLearning-Journal.git\n",
-      "   48a9e4d..04f482e  master -> master\n"
+      "   04f482e..e01bf96  master -> master\n"
      ]
     }
    ],
